chore(deps): add sharp, multer and uuid for image upload and processing

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.9.5"
+		"mongoose": "^8.9.5",
+		"multer": "^2.0.1",
+		"sharp": "^0.34.2",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.9"
